Change interface name and added auth
